slot icon blue border

--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -319,7 +319,7 @@
 		input[type="submit"].slotIcon {
 			background: #fff;
 			background-size: cover;
-			border: 2px solid #000;
+			border: 2px solid vars.$colour-link;
 			border-radius: 100%;
 			box-sizing: border-box;
 			cursor: pointer;
