--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -392,8 +392,11 @@
 	}
 	.unit {
 		border: 1px solid #ccc;
-		margin-bottom: 30px;
+		border-bottom: 0;
 		padding: 20px 20px 15px 20px;
+		&:last-child {
+			border: 1px solid #ccc;
+		}
 	}
 }
 
