--- a/style.css
+++ b/style.css
@@ -2165,7 +2165,17 @@ body.mobilenavopen {
 #footer .copyright p {
   display: inline;
 }
+#footer .footer-menu a {
+  display: block;
+  margin: 10px;
+}
 
+@media only screen and (min-width: 600px) {
+  #footer .footer-menu a {
+    display: inline;
+    margin: 0 10px;
+  }
+}
 .btt {
   display: block;
   font-size: 0;
