fix banner 100 width

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1456,6 +1456,7 @@ body.mobilenavopen {
 	position: relative;
 	img {
 		display: block;
+		width: 100%;
 	}
 	.the_champ_login_container .heateor_ss_sl_optin_container {
 		margin: 0 auto;
