--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -145,13 +145,16 @@
 		color: #fff;
 		font-weight: bold;
 		padding: 8px 12px 6px 12px;
-		&.patrol {
+		&.private,
+		&.patrolop,
+		&.miniop {
 			background: green;
 		}
-		&.public {
+		&.publicevent,
+		&.publicaction {
 			background: orange;
 		}
-		&.joint {
+		&.jo {
 			background: red;
 		}
 	}
