add info class on roster listing, tweak event type colours

--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -152,10 +152,10 @@
 		}
 		&.publicevent,
 		&.publicaction {
-			background: orange;
+			background: #ff8c00;
 		}
 		&.jo {
-			background: red;
+			background: #c00;
 		}
 	}
 }
